# wallet-connect-demo

./: .flaskenv  app.py  pyproject.toml  requirements.txt
templates/: wallet_connect.html
